# fastapi-csrf-protect

./: .gitignore  .travis.yml  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: docs.yml
examples/: __init__.py  body.py  context.py  cookies.py  form_data.py  header.py  login.py  stateful.py
fastapi_csrf/: __init__.py  core.py  csrf_config.py  load_config.py
fastapi_csrf_protect/: __init__.py  core.py  csrf_config.py  exceptions.py  fastapi_csrf_config.py  load_config.py
src/: itsdangerous.pyi  pydantic.pyi  pydantic_settings.pyi
src/fastapi_csrf_protect/: __init__.py  core.py  csrf_config.py  exceptions.py  load_config.py
src/fastapi_csrf_protect/flexible/: __init__.py  core.py  csrf_config.py  load_config.py
src/starlette/: datastructures.pyi  requests.pyi  responses.pyi
static/: protect.base64
templates/: body.html  form.html  header.html
tests/: __init__.py  base.py  conftest.py  cookie_body.py  cookie_flexible.py  cookie_form.py  cookie_header.py  form_field_token.py  load_config.py  load_config_flexible.py  missing_secret.py  missing_token.py  token_expired.py  token_invalid.py  token_reuse.py
tests/flexible/: __init__.py  cookie.py  cookie_body.py  cookie_form.py  cookie_header.py  load_config.py  token_expired.py  token_from_request.py  token_invalid.py  token_reuse.py
