[build-system]
build-backend = 'hatchling.build'
requires = ['hatchling']


[project]
authors = [
  {name='Sitt Guruvanich', email='aekazitt+github@gmail.com'},
]
classifiers = [
  'Environment :: Web Environment',
  'Framework :: AsyncIO',
  'Intended Audience :: Developers',
  'License :: OSI Approved :: MIT License',
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3.7',
  'Programming Language :: Python :: 3.8',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Programming Language :: Python :: 3 :: Only',
  'Operating System :: OS Independent',
  'Topic :: Internet :: WWW/HTTP :: Dynamic Content',
  'Topic :: Software Development :: Libraries :: Python Modules',
]
dependencies = [
  'fastapi >=0',
  'itsdangerous >=2.0.1,<3.0.0',
  'pydantic >=2.0.0',
  'pydantic-settings >=2.0.0',
]
description = 'Stateless implementation of Cross-Site Request Forgery (XSRF) Protection by using Double Submit Cookie mitigation pattern'
homepage = 'https://github.com/aekasitt/fastapi-csrf-protect'
keywords = [
  'asynchronous',
  'cross-site request forgery',
  'csrf',
  'fastapi',
  'samesite',
  'starlette',
  'xsrf',
]
license = 'MIT'
readme = 'README.md'
name = 'fastapi-csrf-protect'
repository = 'https://github.com/aekasitt/fastapi-csrf-protect'
requires-python = '>=3.8'
version = '0.3.4'


[project.optional-dependencies]
examples = [
  'Jinja2 >=3.0.1',
  'python-multipart >=0.0.6',
  'pydantic[email] >=1.7.2,<3.0.0',
  'uvicorn >=0.15.0',
]


tests = [
  'httpx >=0.24.1',
  'pytest >=7.3.1',
]


[tool.pytest.ini_options]
addopts = '--strict-markers --tb=short -s'
testpaths = [ 'tests' ]
python_files = '*.py'


[tool.ruff]
indent-width = 2
line-length = 100
target-version = 'py38'


[tool.ruff.lint.per-file-ignores]
'__init__.py' = ['F401']  # Ignore empty imports


[tool.uv]
dev-dependencies = [
  'mypy >=1.3.0',
  'ruff >=0.4.7',
]
